[gd_scene load_steps=3 format=3 uid="uid://dt8w2ot2vy737"]

[ext_resource type="Script" path="res://systems/NPCs/DialogueUI.gd" id="1_vhqxp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dcmz"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vhqxp")

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1dcmz")

[node name="DialogueContent" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeakerLabel" type="Label" parent="DialoguePanel/DialogueContent"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Carl"

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/DialogueContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Welcome to our town, traveler!"
fit_content = true

[node name="ContinuePrompt" type="Label" parent="DialoguePanel/DialogueContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Press E to continue..."
horizontal_alignment = 2
